@@ -40,6 +40,7 @@ import (
 
 func init() {
 	monitors.RegisterActive("tcp", create)
+	monitors.RegisterActive("synthetics/tcp", create)
 }
 
 var debugf = logp.MakeDebug("tcp")
