@@ -486,7 +486,7 @@ func packageAgent(requiredPackages []string, packagingFn func()) {
 		version = release.Version()
 	}
 
-	packedBeats := []string{"filebeat", "metricbeat"}
+	packedBeats := []string{"filebeat", "heartbeat", "metricbeat"}
 
 	for _, b := range packedBeats {
 		pwd, err := filepath.Abs(filepath.Join("..", b))
