@@ -1,18 +1,0 @@
-heartbeat:
-  monitors:
-    - type: icmp
-      name: icmp
-      schedule: "*/5 * * * * * *"
-      hosts: ["localhost"]
-      ipv4: true
-      ipv6: true
-      mode: any
-      timeout: 16s
-      wait: 1s
-    - type: tcp
-      name: tcp
-output:
-  elasticsearch:
-    hosts: [127.0.0.1:9200, 127.0.0.1:9300]
-    username: elastic
-    password: changeme
