@@ -1,23 +1,0 @@
-streams:
-- type: monitor/icmp
-  name: icmp
-  schedule: '*/5 * * * * * *'
-  hosts: ["localhost"]
-  ipv4: true
-  ipv6: true
-  mode: any
-  timeout: 16s
-  wait: 1s
-- type: log/file
-- type: monitor/tcp
-  name: tcp
-management:
-  host: "localhost"
-config:
-  reload: 123
-outputs:
-  default:
-    type: elasticsearch
-    hosts: [127.0.0.1:9200, 127.0.0.1:9300]
-    username: elastic
-    password: changeme
