@@ -1,0 +1,22 @@
+name: Heartbeat
+cmd: heartbeat
+args: ["-E", "setup.ilm.enabled=false", "-E", "setup.template.enabled=false", "-E", "management.mode=x-pack-fleet", "-E", "management.enabled=true", "-E", "logging.level=debug"]
+artifact: beats/heartbeat
+rules:
+  - fix_stream: {}
+  - filter_values_with_regexp:
+      key: type
+      re: ^synthetics/.+
+      selector: inputs
+  - filter_values:
+      selector: inputs
+      key: enabled
+      values:
+        - true
+  - filter:
+      selectors:
+        - inputs
+        - output
+        - keystore
+when: HasItems(%{[inputs]}) && HasNamespace('output', 'elasticsearch', 'redis',
+  'kafka', 'logstash')
